<resources>
    <string name="app_name">Мои Задачи</string>
    <string name="zadachi">Задачи</string>
    <string name="this_is_task_1">This is Task 1</string>
    <string name="title">Загаловок</string>
    <string name="save">Сохранить</string>
    <string name="desc">Описание</string>
    <string name="no">Нету задач</string>
    <string name="not">Не отмеченные</string>
    <string name="у">Отмеченные</string>
    <string name="фдд">Все</string>
    <string name="image">image</string>
    <string name="enter">Введите загаловок</string>
</resources>